--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     min-height: 600px;
-    background: #0B0F14;
+    background: #000000;
     display: flex;
     flex-direction: column;
     align-items: center;
